--- a/safe-external-cs2/safe-external-cs2.vcxproj
+++ b/safe-external-cs2/safe-external-cs2.vcxproj
@@ -121,6 +121,8 @@
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <DebugInformationFormat>None</DebugInformationFormat>
       <MinimalRebuild>false</MinimalRebuild>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -142,6 +144,8 @@
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <DebugInformationFormat>None</DebugInformationFormat>
       <MinimalRebuild>false</MinimalRebuild>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -153,6 +157,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="zero-mem\pch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="zero-mem\cheats\Aimbot.cpp" />
     <ClCompile Include="zero-mem\cheats\Autofire.cpp" />
     <ClCompile Include="zero-mem\cheats\Esp.cpp" />
@@ -161,13 +169,34 @@
     <ClCompile Include="zero-mem\cheats\Triggerbot.cpp" />
     <ClCompile Include="zero-mem\gui\animation.cpp" />
     <ClCompile Include="zero-mem\gui\settings_manager.cpp" />
-    <ClCompile Include="zero-mem\libs\imgui\imgui.cpp" />
-    <ClCompile Include="zero-mem\libs\imgui\imgui_demo.cpp" />
-    <ClCompile Include="zero-mem\libs\imgui\imgui_draw.cpp" />
-    <ClCompile Include="zero-mem\libs\imgui\imgui_impl_dx11.cpp" />
-    <ClCompile Include="zero-mem\libs\imgui\imgui_impl_win32.cpp" />
-    <ClCompile Include="zero-mem\libs\imgui\imgui_tables.cpp" />
-    <ClCompile Include="zero-mem\libs\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="zero-mem\libs\imgui\imgui.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="zero-mem\libs\imgui\imgui_demo.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="zero-mem\libs\imgui\imgui_draw.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="zero-mem\libs\imgui\imgui_impl_dx11.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="zero-mem\libs\imgui\imgui_impl_win32.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="zero-mem\libs\imgui\imgui_tables.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="zero-mem\libs\imgui\imgui_widgets.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="zero-mem\main.cpp" />
     <ClCompile Include="zero-mem\renderer\directx\directX11.cpp" />
     <ClCompile Include="zero-mem\sdk\CBaseEntity.cpp" />
@@ -184,6 +213,7 @@
     <ClCompile Include="zero-mem\utils\resource_loader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="zero-mem\pch.h" />
     <ClInclude Include="zero-mem\bytes\font_awesome_bytes.h" />
     <ClInclude Include="zero-mem\bytes\font_awesome_icons.h" />
     <ClInclude Include="zero-mem\bytes\noskill.cc_logo_bytes.h" />
